--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c-struct-js",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "UMD module for DataView extension inspired by C structs",
   "main": "umd/struct.min.js",
   "scripts": {
@@ -8,6 +8,14 @@
     "git": "git push origin master",
     "prepublishOnly": "npm run build && npm test && npm run git",
     "test": "standard"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/patrickroberts/c-struct-js.git"
+  },
+  "engines": {
+    "node": ">=6.0.0",
+    "npm": ">=4.0.0"
   },
   "author": "Patrick Roberts",
   "license": "MIT",
