--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,5 @@
 {
-  "presets": [
-    "es2015"
-  ],
+  "presets": ["es2015"],
   "plugins": [
     "transform-new-target",
     ["transform-builtin-extend", { "globals": ["DataView"] }],
