--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c-struct-js",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "UMD module for DataView extension inspired by C structs",
   "main": "umd/struct.min.js",
   "directories": {
@@ -25,23 +25,15 @@
   "standard": {
     "parser": "babel-eslint"
   },
-  "transform": [
-    [
-      "babelify",
-      {
-        "comments": false
-      }
-    ]
-  ],
   "devDependencies": {
-    "babel-eslint": "^8.0.0",
+    "babel-eslint": "^8.0.1",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-new-target": "^7.0.0-alpha.14",
+    "babel-plugin-transform-new-target": "^7.0.0-beta.2",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
-    "buffer": "^5.0.7",
+    "buffer": "^5.0.8",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
